--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Restaurant</title>
 
-	<link rel="stylesheet" type="text/css" href="yc-week2\stylesheets\lorem.css">
+	<link rel="stylesheet" type="text/css" href="stylesheets/lorem.css">
 </head>
 <body>
 <header>
